update Duna's atmosphere

--- a/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Atmospheres/Duna_Atmosphere.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Atmospheres/Duna_Atmosphere.cfg
@@ -6,7 +6,7 @@
 		@Atmosphere:HAS[~enabled[False]]
 		{
 			&maxAltitude = 50000
-			&staticPressureASL = 6.755
+			&staticPressureASL = 6.75500011444092
 			&temperatureSeaLevel = 250
 			
 			%pressureCurve {}
