--- a/GameData/SigmaDimensions/Configs/ReDimension/newCacheFiles.cfg
+++ b/GameData/SigmaDimensions/Configs/ReDimension/newCacheFiles.cfg
@@ -10,7 +10,7 @@
 	}
 	@Body:HAS[~editCache[False]]
 	{
-		@cacheFile = #Sigma/Dimensions/Cache/§$SigmaDimensions/Resize$x]Resize/§$SigmaDimensions/landscape$x]landscape/$cacheFile$
+		@cacheFile = #SigmaDimensions/Cache/§$SigmaDimensions/Resize$x]Resize/§$SigmaDimensions/landscape$x]landscape/$cacheFile$
 		@cacheFile ^= :§:[:
 	}
 	@Body,*
